--- a/admin/src/i18n/de.json
+++ b/admin/src/i18n/de.json
@@ -1,9 +1,39 @@
 {
-  "template_react adapter settings": "Adaptereinstellungen für template_react",
-  "option1": "Option 1",
-  "tooltip": "das ist ein tooltip",
-  "textinput": "Text Input",
-  "buttonOutput": "Button Output",
-  "datapoint": "ioBroker Datenpunkt"
-
+	"adapterOffline": "Der Adapter ist ausgeschaltet, um ein neues Gerät zu erstellen, muss der Adapter eingeschaltet sein. Bitte schalte den Adapter ein!",
+	"add": "hinzufügen",
+	"addBox": "Box hinzufügen",
+	"addNewBox": "Neue Hue Sync Box hinzufügen",
+	"cancel": "Abbrechen",
+	"close": "Schließen",
+	"delete": "Löschen",
+	"deleteConfirm": "Bist du sicher, dass du > %s < löschen willst?",
+	"deleteTitle": "%s Löschen",
+	"edit": "Update",
+	"editBoxConfig": "Konfiguration der Hue Sync Box bearbeiten",
+	"editConfig": "Bearbeiten",
+	"error": "Fehler",
+	"ipAddress": "IP Adresse",
+	"ipAddressTooltip": "Hier bitte die IP Adresse von der Philips Hue Sync Box eintragen (nur IPv4)",
+	"name": "Name",
+	"nameInUse": "Der Name > %s < ist bereits in Gebrauch, bitte vergeben Sie einen anderen.",
+	"namePlaceholder": "Wohnzimmer",
+	"nameTooltip": "Bitte geben Sie hier den Namen der Hue Sync Box ein, z.B. den Ort, an dem sie sich befindet ⇨ Wohnzimmer. ACHTUNG, der Name wird für die Objekterstellung benötigt und darf daher nur einmal vorkommen.",
+	"next": "Weiter",
+	"open_registration": "Box Registrieren",
+	"registration_Notice": "Bitte geben Sie den Namen und die IP Adresse ein, um die Registrierung zu aktivieren.",
+	"registration_button": "Registrierung",
+	"registration_description1": "Sobald die Registrierungstaste gedrückt wird, beginnt die Registrierung.",
+	"registration_description2": "Sie haben nun 5 Sekunden Zeit, die Gerätetaste zu drücken und zu halten (ca. 3 Sekunden), bis die LED grün blinkt. ",
+	"registration_description3": "Wenn die LED grün blinkt, können Sie die Gerätetaste loslassen.",
+	"registration_description4": "Nachdem Sie die Gerätetaste losgelassen haben, müssen Sie innerhalb von 5 Sekunden auf > Weiter < klicken.",
+	"registration_error_1": "Die Zeit ist um!",
+	"registration_error_2": "Die Registrierung für > %s < ist fehlgeschlagen, bitte versuchen Sie es erneut.",
+	"registration_success": "Die Registrierung war für > %s < erfolgreich.",
+	"registration_success_token": "Ihr Token lautet: %s",
+	"registration_titel": "Philips hue Sync Box Registrierung für > %s <",
+	"success": "Erfolgreich",
+	"token": "Token: %s",
+	"tokenInput": "Token",
+	"tokenTooltip": "Bitte geben Sie hier den Token von der Philips Hue Sync Box ein",
+	"warning": "Warnung"
 }
