--- a/admin/src/i18n/en.json
+++ b/admin/src/i18n/en.json
@@ -1,9 +1,39 @@
 {
-  "template_react adapter settings": "Adapter settings for template_react",
-  "option1": "option1",
-  "tooltip": "this is a tooltip",
-  "textinput": "Text Input",
-  "buttonOutput": "Button Output",
-  "datapoint": "ioBroker State"
-
+	"adapterOffline": "The adapter is switched off, to create a new device the adapter must be switched on. Please switch on the adapter!",
+	"add": "add",
+	"addBox": "add Box",
+	"addNewBox": "Add new Hue Sync Box",
+	"cancel": "cancel",
+	"close": "Close",
+	"delete": "Delete",
+	"deleteConfirm": "Are you sure you want to delete > %s <?",
+	"deleteTitle": "%s Delete",
+	"edit": "Update",
+	"editBoxConfig": "Edit Hue Sync Box configuration",
+	"editConfig": "Edit",
+	"error": "error",
+	"ipAddress": "IP Address",
+	"ipAddressTooltip": "Please enter here the IP address of the Philips Hue Sync Box (IPv4 only)",
+	"name": "Name",
+	"nameInUse": "The name > %s < is already in use, please assign another one.",
+	"namePlaceholder": "Living room",
+	"nameTooltip": "Please enter the name of the Hue Sync Box here, e.g. the place where it is located ⇨ Living room. ATTENTION, the name is required for the object creation and may therefore only occur once.",
+	"next": "Next",
+	"open_registration": "Register Box",
+	"registration_Notice": "Please fill in the name and IP address to activate the registration.",
+	"registration_button": "Registration",
+	"registration_description1": "As soon as the registration button is pressed, the registration will start.",
+	"registration_description2": "now you have 5 seconds to press and hold the device key (approx. 3 seconds) until the LED flashes green.",
+	"registration_description3": "When the LED flashes green, you can release the device key.",
+	"registration_description4": "After releasing the device key, you have to click > Next < within 5 seconds. ",
+	"registration_error_1": "Time is up!",
+	"registration_error_2": "Registration for > %s < failed, please try again.",
+	"registration_success": "The registration was successful for > %s <.",
+	"registration_success_token": "Your token is: %s ",
+	"registration_titel": "Philips hue Sync Box Registration for > %s <",
+	"success": "Successful",
+	"token": "Token: %s",
+	"tokenInput": "Token",
+	"tokenTooltip": "Please enter the token from the Philips Hue Sync Box here",
+	"warning": "Warning"
 }
