--- a/admin/src/i18n/es.json
+++ b/admin/src/i18n/es.json
@@ -1,5 +1,39 @@
 {
-	"template_react adapter settings": "Ajustes del adaptador para template_react",
-	"option1": "Opción 1",
-	"option2": "opcion 2"
+	"adapterOffline": "El adaptador está apagado, para crear un nuevo dispositivo el adaptador debe estar encendido. Por favor, ¡enciende el adaptador!",
+	"add": "añade",
+	"addBox": "añadir Caja",
+	"addNewBox": "Añadir nuevo cuadro de sincronización Hue",
+	"cancel": "cancela",
+	"close": "Cerrar",
+	"delete": "Borra",
+	"deleteConfirm": "¿Estás seguro de que quieres borrar > %s <?",
+	"deleteTitle": "%s Borrar",
+	"edit": "Actualiza",
+	"editBoxConfig": "Editar la configuración del cuadro de sincronización Hue",
+	"editConfig": "Edita",
+	"error": "erreur",
+	"ipAddress": "Dirección IP",
+	"ipAddressTooltip": "Introduce aquí la dirección IP del cuadro de sincronización Philips Hue (sólo IPv4)",
+	"name": "Nombre",
+	"nameInUse": "El nombre > %s < ya está en uso, por favor asigne otro.",
+	"namePlaceholder": "Sala de estar",
+	"nameTooltip": "Introduzca aquí el nombre del Hue Sync Box, por ejemplo, el lugar donde se encuentra ⇨ Salón. ATENCIÓN, el nombre es necesario para la creación del objeto y, por lo tanto, solo puede aparecer una vez.",
+	"next": "Siguiente",
+	"open_registration": "Caja de registro",
+	"registration_Notice": "Rellene el nombre y la dirección IP para activar el registro.",
+	"registration_button": "Inscripción",
+	"registration_description1": "En cuanto se pulse el botón de registro, se iniciará el registro.",
+	"registration_description2": "ahora tiene 5 segundos para mantener pulsada la tecla del dispositivo (aprox. 3 segundos) hasta que el LED parpadee en verde.",
+	"registration_description3": "Cuando el LED parpadee en verde, puede soltar la tecla del dispositivo.",
+	"registration_description4": "Después de soltar la tecla del dispositivo, tienes que hacer clic en > Siguiente < antes de 5 segundos. ",
+	"registration_error_1": "¡Se acabó el tiempo!",
+	"registration_error_2": "El registro de > %s < ha fallado, por favor inténtelo de nuevo.",
+	"registration_success": "El registro se ha realizado correctamente para > %s <.",
+	"registration_success_token": "Tu token es: %s",
+	"registration_titel": "Registro de Philips hue Sync Box para > %s <",
+	"success": "Éxito",
+	"token": "Token: %s",
+	"tokenInput": "Token",
+	"tokenTooltip": "Introduce aquí el código de acceso del Philips Hue Sync Box.",
+	"warning": "Advertencia"
 }
