--- a/admin/src/i18n/fr.json
+++ b/admin/src/i18n/fr.json
@@ -1,5 +1,39 @@
 {
-	"template_react adapter settings": "Paramètres d'adaptateur pour template_react",
-	"option1": "Option 1",
-	"option2": "Option 2"
+	"adapterOffline": "L'adaptateur est éteint, pour créer un nouvel appareil, l'adaptateur doit être allumé. Allume l'adaptateur !",
+	"add": "Ajoute",
+	"addBox": "Ajouter une boîte",
+	"addNewBox": "Ajouter une nouvelle boîte Hue Sync",
+	"cancel": "annuler",
+	"close": "Fermer",
+	"delete": "Supprimer",
+	"deleteConfirm": "Tu es sûre de vouloir supprimer > %s < ?",
+	"deleteTitle": "%s Supprimer",
+	"edit": "Mise à jour",
+	"editBoxConfig": "Modifier la configuration de la boîte de synchronisation Hue",
+	"editConfig": "Modifier",
+	"error": "error",
+	"ipAddress": "Adresse IP",
+	"ipAddressTooltip": "Veuillez saisir ici l'adresse IP de la boîte Sync Philips Hue (IPv4 uniquement).",
+	"name": "Nom",
+	"nameInUse": "Le nom > %s < est déjà utilisé, veuillez en attribuer un autre.",
+	"namePlaceholder": "Salle de séjour",
+	"nameTooltip": "Veuillez saisir ici le nom du boîtier Hue Sync, par exemple l'endroit où il se trouve ⇨ le salon. ATTENTION, le nom est nécessaire pour la création de l'objet et ne peut donc apparaître qu'une seule fois.",
+	"next": "Suivant",
+	"open_registration": "Boîte de registre",
+	"registration_Notice": "Veuillez remplir le nom et l'adresse IP pour activer l'enregistrement.",
+	"registration_button": "Inscription",
+	"registration_description1": "Dès que vous aurez appuyé sur le bouton d'enregistrement, l'enregistrement commencera.",
+	"registration_description2": "Vous avez maintenant 5 secondes pour appuyer sur la touche de l'appareil et la maintenir enfoncée (environ 3 secondes) jusqu'à ce que la LED clignote en vert.",
+	"registration_description3": "Lorsque la LED clignote en vert, vous pouvez relâcher la clé de périphérique.",
+	"registration_description4": "Après avoir libéré la clé de l'appareil, vous devez cliquer sur > Suivant < dans les 5 secondes. ",
+	"registration_error_1": "Le temps est écoulé !",
+	"registration_error_2": "L'enregistrement pour > %s < a échoué, veuillez réessayer.",
+	"registration_success": "L'enregistrement a réussi pour > %s <.",
+	"registration_success_token": "Votre jeton est : %s",
+	"registration_titel": "Enregistrement du boîtier Philips hue Sync Box pour > %s <",
+	"success": "Succès de",
+	"token": "Jeton : %s",
+	"tokenInput": "Token",
+	"tokenTooltip": "Veuillez entrer le jeton de la boîte de synchronisation Philips Hue ici.",
+	"warning": "Avertissement"
 }
