--- a/admin/src/i18n/it.json
+++ b/admin/src/i18n/it.json
@@ -1,5 +1,39 @@
 {
-	"template_react adapter settings": "Impostazioni dell'adattatore per template_react",
-	"option1": "opzione 1",
-	"option2": "opzione 2"
+	"adapterOffline": "L'adattatore è spento, per creare un nuovo dispositivo l'adattatore deve essere acceso. Accendi l'adattatore!",
+	"add": "aggiungere",
+	"addBox": "aggiungi Box",
+	"addNewBox": "Aggiungi un nuovo Hue Sync Box",
+	"cancel": "annullamento",
+	"close": "Chiudi",
+	"delete": "Elimina",
+	"deleteConfirm": "Sei sicuro di voler eliminare > %s <?",
+	"deleteTitle": "%s Elimina",
+	"edit": "Aggiornamento",
+	"editBoxConfig": "Modifica la configurazione della Hue Sync Box",
+	"editConfig": "Modifica",
+	"error": "errore",
+	"ipAddress": "Indirizzo IP",
+	"ipAddressTooltip": "Inserisci qui l'indirizzo IP del Philips Hue Sync Box (solo IPv4)",
+	"name": "Nome",
+	"nameInUse": "Il nome > %s < è già in uso, assegnarne un altro.",
+	"namePlaceholder": "Soggiorno",
+	"nameTooltip": "Inserire qui il nome della Hue Sync Box, ad esempio il luogo in cui si trova ⇨ Soggiorno. ATTENZIONE, il nome è necessario per la creazione dell'oggetto e può quindi essere inserito una sola volta.",
+	"next": "Avanti",
+	"open_registration": "Scatola del registro",
+	"registration_Notice": "Inserire il nome e l'indirizzo IP per attivare la registrazione.",
+	"registration_button": "Registrazione",
+	"registration_description1": "Non appena si preme il pulsante di registrazione, si avvia la registrazione.",
+	"registration_description2": "Ora avete 5 secondi per tenere premuto il tasto dispositivo (circa 3 secondi) finché il LED non lampeggia in verde.",
+	"registration_description3": "Quando il LED lampeggia in verde, è possibile rilasciare il tasto dispositivo.",
+	"registration_description4": "Dopo aver rilasciato il tasto del dispositivo, è necessario fare clic su > Avanti < entro 5 secondi. ",
+	"registration_error_1": "Il tempo è scaduto!",
+	"registration_error_2": "La registrazione per > %s < non è riuscita, riprovare.",
+	"registration_success": "La registrazione è avvenuta con successo per > %s <.",
+	"registration_success_token": "Il vostro token è: %s",
+	"registration_titel": "Registrazione di Philips hue Sync Box per > %s <",
+	"success": "Successo",
+	"token": "Gettone: %s",
+	"tokenInput": "Gettone",
+	"tokenTooltip": "Inserire il token della Philips Hue Sync Box qui",
+	"warning": "Avvertenze"
 }
