--- a/admin/src/i18n/nl.json
+++ b/admin/src/i18n/nl.json
@@ -1,5 +1,39 @@
 {
-	"template_react adapter settings": "Adapterinstellingen voor template_react",
-	"option1": "Optie 1",
-	"option2": "Optie 2"
+	"adapterOffline": "De adapter is uitgeschakeld, om een nieuw apparaat te maken moet de adapter ingeschakeld worden. Schakel de adapter in!",
+	"add": "toevoegen",
+	"addBox": "doos toevoegen",
+	"addNewBox": "Nieuwe Hue Sync Box toevoegen",
+	"cancel": "annuleren",
+	"close": "Sluit",
+	"delete": "Verwijder",
+	"deleteConfirm": "Weet je zeker dat je > %s < wilt verwijderen?",
+	"deleteTitle": "%s Wissen",
+	"edit": "Update",
+	"editBoxConfig": "Hue Sync Box configuratie bewerken",
+	"editConfig": "Bewerk",
+	"error": "fout",
+	"ipAddress": "IP adres",
+	"ipAddressTooltip": "Voer hier het IP-adres van de Philips Hue Sync Box in (alleen IPv4)",
+	"name": "Naam",
+	"nameInUse": "De naam > %s < is al in gebruik, wijs een andere toe.",
+	"namePlaceholder": "Woonkamer",
+	"nameTooltip": "Voer hier de naam van de Hue Sync Box in, bijv. de plaats waar deze zich bevindt ⇨ Woonkamer. ATTENTIE, de naam is nodig voor het aanmaken van het object en mag dus maar één keer voorkomen.",
+	"next": "Volgende",
+	"open_registration": "Register Box",
+	"registration_Notice": "Vul de naam en het IP adres in om de registratie te activeren.",
+	"registration_button": "Registratie",
+	"registration_description1": "Zodra op de registratieknop wordt gedrukt, begint de registratie.",
+	"registration_description2": "U hebt nu 5 seconden om de apparaattoets ingedrukt te houden (ongeveer 3 seconden) totdat de LED groen knippert.",
+	"registration_description3": "Wanneer de LED groen knippert, kunt u de apparaattoets loslaten.",
+	"registration_description4": "Na het loslaten van de apparaatsleutel moet u binnen 5 seconden op > Volgende < klikken. ",
+	"registration_error_1": "De tijd is om!",
+	"registration_error_2": "Registratie voor > %s < is mislukt, probeer het opnieuw.",
+	"registration_success": "De registratie was succesvol voor > %s <.",
+	"registration_success_token": "Your token is: %s",
+	"registration_titel": "Philips hue Sync Box registratie voor > %s <",
+	"success": "Succesvol",
+	"token": "Gettone: %s",
+	"tokenInput": "Token",
+	"tokenTooltip": "Voer hier het token van de Philips Hue Sync Box in",
+	"warning": "Waarschuwing"
 }
