--- a/admin/src/i18n/pt.json
+++ b/admin/src/i18n/pt.json
@@ -1,5 +1,39 @@
 {
-	"template_react adapter settings": "Configurações do adaptador para template_react",
-	"option1": "Opção 1",
-	"option2": "opção 2"
+	"adapterOffline": "O adaptador está desligado, para criar um novo dispositivo o adaptador tem de estar ligado. Por favor liga o adaptador!",
+	"add": "adicionar",
+	"addBox": "Adicionar Caixa",
+	"addNewBox": "Adicionar nova Hue Sync Box",
+	"cancel": "cancelar",
+	"close": "Fechar",
+	"delete": "Apagar",
+	"deleteConfirm": "Tens a certeza que queres apagar > %s <?",
+	"deleteTitle": "%s Eliminar",
+	"edit": "Actualização",
+	"editBoxConfig": "Editar a configuração da caixa de sincronização de matizes",
+	"editConfig": "Editar",
+	"error": "erro",
+	"ipAddress": "Endereço IP",
+	"ipAddressTooltip": "Por favor introduz aqui o endereço IP da caixa de sincronização da Philips Hue Sync Box (apenas IPv4)",
+	"name": "Nome",
+	"nameInUse": "O nome > %s < já está em uso, por favor atribuir outro.",
+	"namePlaceholder": "Sala de estar",
+	"nameTooltip": "Por favor introduza aqui o nome da Hue Sync Box, por exemplo, o local onde se encontra ⇨ Sala de estar. ATENÇÃO, o nome é necessário para a criação do objecto e, portanto, só pode ocorrer uma vez.",
+	"next": "Próximo",
+	"open_registration": "Caixa de registo",
+	"registration_Notice": "Por favor, preencha o nome e o endereço IP para activar o registo.",
+	"registration_button": "Inscrição",
+	"registration_description1": "Assim que o botão de registo for premido, o registo será iniciado.",
+	"registration_description2": "agora tem 5 segundos para premir e manter premida a tecla de dispositivo (aprox. 3 segundos) até o LED piscar a verde.",
+	"registration_description3": "Quando o LED pisca a verde, pode libertar a chave do dispositivo.",
+	"registration_description4": "Após soltar a chave do dispositivo, tem de clicar em > Next < dentro de 5 segundos. ",
+	"registration_error_1": "Acabou o tempo!",
+	"registration_error_2": "O registo para > %s < falhou, por favor tente novamente.",
+	"registration_success": "O registo foi bem sucedido para > %s <.",
+	"registration_success_token": "A sua ficha é: %s",
+	"registration_titel": "Registo da Philips hue Sync Box para > %s <",
+	"success": "Bem sucedido",
+	"token": "Token: %s",
+	"tokenInput": "Token",
+	"tokenTooltip": "Por favor introduza aqui o símbolo da caixa Philips Hue Sync",
+	"warning": "Advertência"
 }
