--- a/admin/src/i18n/ru.json
+++ b/admin/src/i18n/ru.json
@@ -1,5 +1,39 @@
 {
-	"template_react adapter settings": "Настройки адаптера для template_react",
-	"option1": "Опция 1",
-	"option2": "option2"
+	"adapterOffline": "Адаптер выключен, для создания нового устройства адаптер должен быть включен. Пожалуйста, включи адаптер!",
+	"add": "добавьте",
+	"addBox": "добавьте Box",
+	"addNewBox": "Добавьте новый блок синхронизации Hue",
+	"cancel": "отменить",
+	"close": "Закрыть",
+	"delete": "Удалить",
+	"deleteConfirm": "Ты уверена, что хочешь удалить > %s <?",
+	"deleteTitle": "%s Удалить",
+	"edit": "Обновить",
+	"editBoxConfig": "Редактирование конфигурации Hue Sync Box",
+	"editConfig": "Редактировать",
+	"error": "ошибка",
+	"ipAddress": "IP адрес",
+	"ipAddressTooltip": "Введите здесь IP-адрес блока синхронизации Philips Hue Sync Box (только IPv4).",
+	"name": "Имя",
+	"nameInUse": "Имя > %s < уже используется, пожалуйста, назначьте другое.",
+	"namePlaceholder": "Гостиная",
+	"nameTooltip": "Введите здесь название блока синхронизации Hue Sync Box, например, место, где он находится ⇨ Гостиная. ВНИМАНИЕ, имя требуется для создания объекта и поэтому может встречаться только один раз.",
+	"next": "Следующий",
+	"open_registration": "Регистрационный ящик",
+	"registration_Notice": "Пожалуйста, введите имя и IP адрес для активации регистрации.",
+	"registration_button": "Регистрация",
+	"registration_description1": "Как только кнопка регистрации будет нажата, начнется регистрация.",
+	"registration_description2": "теперь у вас есть 5 секунд, чтобы нажать и удерживать кнопку устройства (около 3 секунд), пока светодиод не начнет мигать зеленым цветом.",
+	"registration_description3": "Когда светодиод замигает зеленым цветом, можно отпустить клавишу устройства.",
+	"registration_description4": "После отпускания ключа устройства необходимо нажать > Next < в течение 5 секунд. ",
+	"registration_error_1": "Время вышло!",
+	"registration_error_2": "Регистрация для > %s < не удалась, попробуйте еще раз.",
+	"registration_success": "Регистрация прошла успешно для > %s <.",
+	"registration_success_token": "Ваш токен: %s",
+	"registration_titel": "Регистрация Philips hue Sync Box для > %s <",
+	"success": "Успешный",
+	"token": "Токен: %s",
+	"tokenInput": "Токен",
+	"tokenTooltip": "Пожалуйста, введите токен от блока синхронизации Philips Hue Sync Box здесь",
+	"warning": "Предупреждение"
 }
