--- a/admin/src/i18n/zh-cn.json
+++ b/admin/src/i18n/zh-cn.json
@@ -1,5 +1,39 @@
 {
-	"template_react adapter settings": "template_react的适配器设置",
-	"option1": "选项1",
-	"option2": "选项2"
+	"adapterOffline": "适配器是关闭的，要创建一个新的设备，必须打开适配器。请打开适配器!",
+	"add": "增加",
+	"addBox": "添加盒子",
+	"addNewBox": "添加新的Hue Sync Box",
+	"cancel": "取消",
+	"close": "关闭",
+	"delete": "删除",
+	"deleteConfirm": "你确定你要删除>%s <？",
+	"deleteTitle": "删除%s",
+	"edit": "更新",
+	"editBoxConfig": "编辑Hue Sync Box配置",
+	"editConfig": "编辑",
+	"error": "错误",
+	"ipAddress": "IP地址",
+	"ipAddressTooltip": "请在此输入飞利浦Hue同步盒的IP地址（仅限IPv4）。",
+	"name": "命名",
+	"nameInUse": "名称>%s <已经在使用，请指定另一个。",
+	"namePlaceholder": "客厅",
+	"nameTooltip": "请在此输入Hue Sync Box的名称，例如：它所在的地方 ⇨客厅。注意，该名称是创建对象所需的，因此只能出现一次。",
+	"next": "下一页",
+	"open_registration": "注册箱",
+	"registration_Notice": "请填写姓名和IP地址以激活注册。",
+	"registration_button": "注册",
+	"registration_description1": "只要按下注册按钮，注册就会开始。",
+	"registration_description2": "现在你有5秒钟的时间按住设备键（大约3秒钟），直到LED灯闪烁绿色。",
+	"registration_description3": "当LED灯闪烁绿色时，你可以释放设备键。",
+	"registration_description4": "松开设备钥匙后，你必须在5秒钟内点击>下一步<。",
+	"registration_error_1": "时间到了!",
+	"registration_error_2": ">%s <的注册失败，请重试。",
+	"registration_success": "注册成功的是 > %s <。",
+	"registration_success_token": "您的标记是：%s",
+	"registration_titel": "Philips hue Sync Box注册为>%s <",
+	"success": "成功的",
+	"token": "代币: %s",
+	"tokenInput": "代币",
+	"tokenTooltip": "请在此输入飞利浦Hue同步盒的令牌",
+	"warning": "警告"
 }
