--- a/admin/src/i18n/pl.json
+++ b/admin/src/i18n/pl.json
@@ -1,5 +1,39 @@
 {
-	"template_react adapter settings": "Ustawienia adaptera dla template_react",
-	"option1": "opcja 1",
-	"option2": "Opcja 2"
+	"adapterOffline": "Adapter jest wyłączony, aby utworzyć nowe urządzenie, adapter musi być włączony. Włącz adapter!",
+	"add": "dodaj",
+	"addBox": "Ajouter une boîte",
+	"addNewBox": "Dodaj nowe urządzenie Hue Sync Box",
+	"cancel": "anuluj",
+	"close": "Zamknij",
+	"delete": "Apagar",
+	"deleteConfirm": "Czy na pewno chcesz usunąć > %s <?",
+	"deleteTitle": "%s Usuń",
+	"edit": "Aktualizacja",
+	"editBoxConfig": "Edytuj konfigurację Hue Sync Box",
+	"editConfig": "Edytuj",
+	"error": "błąd",
+	"ipAddress": "Adres IP",
+	"ipAddressTooltip": "Wpisz tutaj adres IP urządzenia Philips Hue Sync Box (tylko IPv4).",
+	"name": "Nazwa",
+	"nameInUse": "Nazwa > %s < jest już w użyciu, proszę przypisać inną.",
+	"namePlaceholder": "Pokój dzienny",
+	"nameTooltip": "Wpisz tutaj nazwę Hue Sync Box, np. miejsce, w którym się znajduje ⇨ Salon. UWAGA, nazwa jest wymagana przy tworzeniu obiektu i dlatego może wystąpić tylko raz.",
+	"next": "Następny",
+	"open_registration": "Pole rejestracji",
+	"registration_Notice": "Prosimy o wpisanie nazwy i adresu IP w celu aktywacji rejestracji.",
+	"registration_button": "Rejestracja",
+	"registration_description1": "Zaraz po naciśnięciu przycisku rejestracji rozpocznie się rejestracja.",
+	"registration_description2": "Teraz masz 5 sekund, aby nacisnąć i przytrzymać przycisk urządzenia (ok. 3 sekundy), aż dioda LED zacznie migać na zielono.",
+	"registration_description3": "Gdy dioda LED miga na zielono, można zwolnić klucz urządzenia.",
+	"registration_description4": "Po zwolnieniu klucza urządzenia należy w ciągu 5 sekund kliknąć > Next <. ",
+	"registration_error_1": "Czas minął!",
+	"registration_error_2": "Rejestracja dla > %s < nie powiodła się, proszę spróbować ponownie.",
+	"registration_success": "Rejestracja zakończyła się sukcesem dla > %s <.",
+	"registration_success_token": "Twój token to: %s",
+	"registration_titel": "Philips hue Sync Box rejestracja dla > %s <.",
+	"success": "Udane",
+	"token": "Żeton: %s",
+	"tokenInput": "Token",
+	"tokenTooltip": "Proszę wprowadzić token z Philips Hue Sync Box tutaj",
+	"warning": "Ostrzeżenie"
 }
