--- a/admin/src/i18n/ru.json
+++ b/admin/src/i18n/ru.json
@@ -22,6 +22,7 @@
 	"open_registration": "Регистрационный ящик",
 	"registration_Notice": "Пожалуйста, введите имя и IP адрес для активации регистрации.",
 	"registration_button": "Регистрация",
+	"registration_dataError": "Ошибка регистрации > %s < Проверьте свой IP и повторите попытку",
 	"registration_description1": "Как только кнопка регистрации будет нажата, начнется регистрация.",
 	"registration_description2": "теперь у вас есть 5 секунд, чтобы нажать и удерживать кнопку устройства (около 3 секунд), пока светодиод не начнет мигать зеленым цветом.",
 	"registration_description3": "Когда светодиод замигает зеленым цветом, можно отпустить клавишу устройства.",
