--- a/admin/src/i18n/uk.json
+++ b/admin/src/i18n/uk.json
@@ -22,6 +22,7 @@
 	"open_registration": "Реєстраційна скринька",
 	"registration_Notice": "Будь ласка, введіть ім'я та IP адресу для активації реєстрації.",
 	"registration_button": "Реєстрація",
+	"registration_dataError": "Помилка при реєстрації > %s < Перевірте свій IP і спробуйте ще раз",
 	"registration_description1": "Після натискання кнопки реєстрації розпочнеться реєстрація.",
 	"registration_description2": "тепер у Вас є 5 секунд, щоб натиснути і утримувати клавішу пристрою (приблизно 3 секунди) до тих пір, поки світлодіод не почне блимати зеленим кольором.",
 	"registration_description3": "Коли світлодіод почне блимати зеленим кольором, можна відпускати ключ від пристрою.",
