--- a/admin/src/i18n/fr.json
+++ b/admin/src/i18n/fr.json
@@ -22,6 +22,7 @@
 	"open_registration": "Boîte de registre",
 	"registration_Notice": "Veuillez remplir le nom et l'adresse IP pour activer l'enregistrement.",
 	"registration_button": "Inscription",
+	"registration_dataError": "Erreur d'enregistrement > %s < Vérifiez votre IP et réessayez",
 	"registration_description1": "Dès que vous aurez appuyé sur le bouton d'enregistrement, l'enregistrement commencera.",
 	"registration_description2": "Vous avez maintenant 5 secondes pour appuyer sur la touche de l'appareil et la maintenir enfoncée (environ 3 secondes) jusqu'à ce que la LED clignote en vert.",
 	"registration_description3": "Lorsque la LED clignote en vert, vous pouvez relâcher la clé de périphérique.",
