--- a/admin/src/i18n/zh-cn.json
+++ b/admin/src/i18n/zh-cn.json
@@ -22,6 +22,7 @@
 	"open_registration": "注册箱",
 	"registration_Notice": "请填写姓名和IP地址以激活注册。",
 	"registration_button": "注册",
+	"registration_dataError": "注册错误 > %s < 检查您的IP并重试",
 	"registration_description1": "只要按下注册按钮，注册就会开始。",
 	"registration_description2": "现在你有5秒钟的时间按住设备键（大约3秒钟），直到LED灯闪烁绿色。",
 	"registration_description3": "当LED灯闪烁绿色时，你可以释放设备键。",
