Optimization and improvement of the registration process

--- a/admin/src/i18n/de.json
+++ b/admin/src/i18n/de.json
@@ -24,9 +24,9 @@
 	"registration_button": "Registrierung",
 	"registration_dataError": "Fehler bei der Registrierung > %s < Überprüfen Sie Ihre IP und versuchen Sie es erneut",
 	"registration_description1": "Sobald die Registrierungstaste gedrückt wird, beginnt die Registrierung.",
-	"registration_description2": "Sie haben nun 5 Sekunden Zeit, die Gerätetaste zu drücken und zu halten (ca. 3 Sekunden), bis die LED grün blinkt. ",
+	"registration_description2": "Sie haben nun 30 Sekunden Zeit, die Gerätetaste zu drücken und zu halten (ca. 3 Sekunden), bis die LED grün blinkt. ",
 	"registration_description3": "Wenn die LED grün blinkt, können Sie die Gerätetaste loslassen.",
-	"registration_description4": "Nachdem Sie die Gerätetaste losgelassen haben, müssen Sie innerhalb von 5 Sekunden auf > Weiter < klicken.",
+	"registration_description4": "Nachdem Sie die Gerätetaste losgelassen haben, wird nach ein paar Sekunden der Token angezeigt und in das Feld eingefügt.",
 	"registration_error_1": "Die Zeit ist um!",
 	"registration_error_2": "Die Registrierung für > %s < ist fehlgeschlagen, bitte versuchen Sie es erneut.",
 	"registration_success": "Die Registrierung war für > %s < erfolgreich.",
