--- a/admin/src/i18n/en.json
+++ b/admin/src/i18n/en.json
@@ -24,9 +24,9 @@
 	"registration_button": "Registration",
 	"registration_dataError": "Error registering > %s < Check your IP and try again",
 	"registration_description1": "As soon as the registration button is pressed, the registration will start.",
-	"registration_description2": "now you have 5 seconds to press and hold the device key (approx. 3 seconds) until the LED flashes green.",
+	"registration_description2": "now you have 30 seconds to press and hold the device key (approx. 3 seconds) until the LED flashes green.",
 	"registration_description3": "When the LED flashes green, you can release the device key.",
-	"registration_description4": "After releasing the device key, you have to click > Next < within 5 seconds. ",
+	"registration_description4": "After you release the device key, after a few seconds will be displayed the token and inserted into the field.",
 	"registration_error_1": "Time is up!",
 	"registration_error_2": "Registration for > %s < failed, please try again.",
 	"registration_success": "The registration was successful for > %s <.",
