--- a/admin/src/i18n/es.json
+++ b/admin/src/i18n/es.json
@@ -24,9 +24,9 @@
 	"registration_button": "Inscripción",
 	"registration_dataError": "Error al registrar > %s < Compruebe su IP e inténtelo de nuevo.",
 	"registration_description1": "En cuanto se pulse el botón de registro, se iniciará el registro.",
-	"registration_description2": "ahora tiene 5 segundos para mantener pulsada la tecla del dispositivo (aprox. 3 segundos) hasta que el LED parpadee en verde.",
+	"registration_description2": "ahora tiene 30 segundos para mantener pulsada la tecla del dispositivo (aprox. 3 segundos) hasta que el LED parpadee en verde.",
 	"registration_description3": "Cuando el LED parpadee en verde, puede soltar la tecla del dispositivo.",
-	"registration_description4": "Después de soltar la tecla del dispositivo, tienes que hacer clic en > Siguiente < antes de 5 segundos. ",
+	"registration_description4": "Después de soltar la llave del dispositivo, al cabo de unos segundos se mostrará el token y se insertará en el campo.",
 	"registration_error_1": "¡Se acabó el tiempo!",
 	"registration_error_2": "El registro de > %s < ha fallado, por favor inténtelo de nuevo.",
 	"registration_success": "El registro se ha realizado correctamente para > %s <.",
