--- a/admin/src/i18n/fr.json
+++ b/admin/src/i18n/fr.json
@@ -24,9 +24,9 @@
 	"registration_button": "Inscription",
 	"registration_dataError": "Erreur d'enregistrement > %s < Vérifiez votre IP et réessayez",
 	"registration_description1": "Dès que vous aurez appuyé sur le bouton d'enregistrement, l'enregistrement commencera.",
-	"registration_description2": "Vous avez maintenant 5 secondes pour appuyer sur la touche de l'appareil et la maintenir enfoncée (environ 3 secondes) jusqu'à ce que la LED clignote en vert.",
+	"registration_description2": "Vous avez maintenant 30 secondes pour appuyer sur la touche de l'appareil et la maintenir enfoncée (environ 3 secondes) jusqu'à ce que la LED clignote en vert.",
 	"registration_description3": "Lorsque la LED clignote en vert, vous pouvez relâcher la clé de périphérique.",
-	"registration_description4": "Après avoir libéré la clé de l'appareil, vous devez cliquer sur > Suivant < dans les 5 secondes. ",
+	"registration_description4": "Après avoir relâché la clé de l'appareil, après quelques secondes, le jeton s'affiche et est inséré dans le champ.",
 	"registration_error_1": "Le temps est écoulé !",
 	"registration_error_2": "L'enregistrement pour > %s < a échoué, veuillez réessayer.",
 	"registration_success": "L'enregistrement a réussi pour > %s <.",
