--- a/admin/src/i18n/it.json
+++ b/admin/src/i18n/it.json
@@ -24,9 +24,9 @@
 	"registration_button": "Registrazione",
 	"registration_dataError": "Errore di registrazione > %s < Controllare il proprio IP e riprovare",
 	"registration_description1": "Non appena si preme il pulsante di registrazione, si avvia la registrazione.",
-	"registration_description2": "Ora avete 5 secondi per tenere premuto il tasto dispositivo (circa 3 secondi) finché il LED non lampeggia in verde.",
+	"registration_description2": "Ora avete 30 secondi per tenere premuto il tasto dispositivo (circa 3 secondi) finché il LED non lampeggia in verde.",
 	"registration_description3": "Quando il LED lampeggia in verde, è possibile rilasciare il tasto dispositivo.",
-	"registration_description4": "Dopo aver rilasciato il tasto del dispositivo, è necessario fare clic su > Avanti < entro 5 secondi. ",
+	"registration_description4": "Dopo aver rilasciato la chiave del dispositivo, dopo qualche secondo verrà visualizzato il token e inserito nel campo.",
 	"registration_error_1": "Il tempo è scaduto!",
 	"registration_error_2": "La registrazione per > %s < non è riuscita, riprovare.",
 	"registration_success": "La registrazione è avvenuta con successo per > %s <.",
