--- a/admin/src/i18n/nl.json
+++ b/admin/src/i18n/nl.json
@@ -24,9 +24,9 @@
 	"registration_button": "Registratie",
 	"registration_dataError": "Fout bij het registreren > %s < Controleer uw IP en probeer het opnieuw",
 	"registration_description1": "Zodra op de registratieknop wordt gedrukt, begint de registratie.",
-	"registration_description2": "U hebt nu 5 seconden om de apparaattoets ingedrukt te houden (ongeveer 3 seconden) totdat de LED groen knippert.",
+	"registration_description2": "U hebt nu 30 seconden om de apparaattoets ingedrukt te houden (ongeveer 3 seconden) totdat de LED groen knippert.",
 	"registration_description3": "Wanneer de LED groen knippert, kunt u de apparaattoets loslaten.",
-	"registration_description4": "Na het loslaten van de apparaatsleutel moet u binnen 5 seconden op > Volgende < klikken. ",
+	"registration_description4": "Nadat u de apparaatsleutel hebt losgelaten, wordt na enkele seconden het token weergegeven en in het veld geplaatst.",
 	"registration_error_1": "De tijd is om!",
 	"registration_error_2": "Registratie voor > %s < is mislukt, probeer het opnieuw.",
 	"registration_success": "De registratie was succesvol voor > %s <.",
