--- a/admin/src/i18n/pl.json
+++ b/admin/src/i18n/pl.json
@@ -24,9 +24,9 @@
 	"registration_button": "Rejestracja",
 	"registration_dataError": "Błąd rejestracji > %s < Sprawdź swoje IP i spróbuj ponownie",
 	"registration_description1": "Zaraz po naciśnięciu przycisku rejestracji rozpocznie się rejestracja.",
-	"registration_description2": "Teraz masz 5 sekund, aby nacisnąć i przytrzymać przycisk urządzenia (ok. 3 sekundy), aż dioda LED zacznie migać na zielono.",
+	"registration_description2": "Teraz masz 30 sekund, aby nacisnąć i przytrzymać przycisk urządzenia (ok. 3 sekundy), aż dioda LED zacznie migać na zielono.",
 	"registration_description3": "Gdy dioda LED miga na zielono, można zwolnić klucz urządzenia.",
-	"registration_description4": "Po zwolnieniu klucza urządzenia należy w ciągu 5 sekund kliknąć > Next <. ",
+	"registration_description4": "Po zwolnieniu klawisza urządzenia, po kilku sekundach zostanie wyświetlony token i włożony do pola.",
 	"registration_error_1": "Czas minął!",
 	"registration_error_2": "Rejestracja dla > %s < nie powiodła się, proszę spróbować ponownie.",
 	"registration_success": "Rejestracja zakończyła się sukcesem dla > %s <.",
