--- a/admin/src/i18n/pt.json
+++ b/admin/src/i18n/pt.json
@@ -24,9 +24,9 @@
 	"registration_button": "Inscrição",
 	"registration_dataError": "Registo de erros > %s < Verifique o seu IP e tente novamente",
 	"registration_description1": "Assim que o botão de registo for premido, o registo será iniciado.",
-	"registration_description2": "agora tem 5 segundos para premir e manter premida a tecla de dispositivo (aprox. 3 segundos) até o LED piscar a verde.",
+	"registration_description2": "agora tem 30 segundos para premir e manter premida a tecla de dispositivo (aprox. 3 segundos) até o LED piscar a verde.",
 	"registration_description3": "Quando o LED pisca a verde, pode libertar a chave do dispositivo.",
-	"registration_description4": "Após soltar a chave do dispositivo, tem de clicar em > Next < dentro de 5 segundos. ",
+	"registration_description4": "Depois de soltar a chave do dispositivo, após alguns segundos será afixada a ficha e inserida no campo.",
 	"registration_error_1": "Acabou o tempo!",
 	"registration_error_2": "O registo para > %s < falhou, por favor tente novamente.",
 	"registration_success": "O registo foi bem sucedido para > %s <.",
