--- a/admin/src/i18n/uk.json
+++ b/admin/src/i18n/uk.json
@@ -24,9 +24,9 @@
 	"registration_button": "Реєстрація",
 	"registration_dataError": "Помилка при реєстрації > %s < Перевірте свій IP і спробуйте ще раз",
 	"registration_description1": "Після натискання кнопки реєстрації розпочнеться реєстрація.",
-	"registration_description2": "тепер у Вас є 5 секунд, щоб натиснути і утримувати клавішу пристрою (приблизно 3 секунди) до тих пір, поки світлодіод не почне блимати зеленим кольором.",
+	"registration_description2": "тепер у Вас є 30 секунд, щоб натиснути і утримувати клавішу пристрою (приблизно 3 секунди) до тих пір, поки світлодіод не почне блимати зеленим кольором.",
 	"registration_description3": "Коли світлодіод почне блимати зеленим кольором, можна відпускати ключ від пристрою.",
-	"registration_description4": "Після відпускання клавіші пристрою необхідно протягом 5 секунд натиснути > Далі <. ",
+	"registration_description4": "Після того, як Ви відпустите клавішу пристрою, через декілька секунд токен буде відображений на екрані та вставлений в поле.",
 	"registration_error_1": "Час вийшов!",
 	"registration_error_2": "Реєстрація на > %s < не вдалася, будь ласка, спробуйте ще раз.",
 	"registration_success": "Реєстрацію успішно пройшли > %s <.",
