--- a/admin/src/i18n/zh-cn.json
+++ b/admin/src/i18n/zh-cn.json
@@ -24,9 +24,9 @@
 	"registration_button": "注册",
 	"registration_dataError": "注册错误 > %s < 检查您的IP并重试",
 	"registration_description1": "只要按下注册按钮，注册就会开始。",
-	"registration_description2": "现在你有5秒钟的时间按住设备键（大约3秒钟），直到LED灯闪烁绿色。",
+	"registration_description2": "现在你有30秒钟的时间按住设备键（大约3秒钟），直到LED灯闪烁绿色。",
 	"registration_description3": "当LED灯闪烁绿色时，你可以释放设备键。",
-	"registration_description4": "松开设备钥匙后，你必须在5秒钟内点击>下一步<。",
+	"registration_description4": "在你松开设备钥匙后，几秒钟后将显示令牌并插入字段中。",
 	"registration_error_1": "时间到了!",
 	"registration_error_2": ">%s <的注册失败，请重试。",
 	"registration_success": "注册成功的是 > %s <。",
