--- a/admin/src/i18n/ru.json
+++ b/admin/src/i18n/ru.json
@@ -24,9 +24,9 @@
 	"registration_button": "Регистрация",
 	"registration_dataError": "Ошибка регистрации > %s < Проверьте свой IP и повторите попытку",
 	"registration_description1": "Как только кнопка регистрации будет нажата, начнется регистрация.",
-	"registration_description2": "теперь у вас есть 5 секунд, чтобы нажать и удерживать кнопку устройства (около 3 секунд), пока светодиод не начнет мигать зеленым цветом.",
+	"registration_description2": "теперь у вас есть 30 секунд, чтобы нажать и удерживать кнопку устройства (около 3 секунд), пока светодиод не начнет мигать зеленым цветом.",
 	"registration_description3": "Когда светодиод замигает зеленым цветом, можно отпустить клавишу устройства.",
-	"registration_description4": "После отпускания ключа устройства необходимо нажать > Next < в течение 5 секунд. ",
+	"registration_description4": "После того как вы отпустите кнопку устройства, через несколько секунд на экране появится токен и будет вставлен в поле.",
 	"registration_error_1": "Время вышло!",
 	"registration_error_2": "Регистрация для > %s < не удалась, попробуйте еще раз.",
 	"registration_success": "Регистрация прошла успешно для > %s <.",
